--- a/Properties/property4.html
+++ b/Properties/property4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Property 3 Details</title>
+    <title>Property 1 Details</title>
     <style>
         /* Add your CSS styles here */
         body {
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
-            color: #333;
+            color: #222;
         }
         .container {
             max-width: 1200px;
@@ -19,7 +19,7 @@
             padding: 20px;
         }
         header {
-            background-color: #333;
+            background-color: #222;
             color: #fff;
             padding: 10px 0;
             text-align: center;
@@ -31,12 +31,12 @@
         nav a {
             display: inline-block;
             margin: 0 10px;
-            color: #333;
+            color: #222;
             text-decoration: none;
             padding: 10px 20px;
             background-color: #fff;
             border-radius: 5px;
-            transition: background-color 0.3s ease;
+            transition: background-color 0.2s ease;
         }
         nav a:hover {
             background-color: #ddd;
@@ -68,23 +68,72 @@
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
+        .booking-buttons {
+            margin-top: 20px;
+        }
+        .booking-buttons a {
+            display: inline-block;
+            margin: 0 10px;
+            padding: 10px 20px;
+            background-color: #fff;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            text-decoration: none;
+            color: #222;
+            transition: background-color 0.2s, border-color 0.2s;
+        }
+        .booking-buttons a:hover {
+            background-color: #eee;
+            border-color: #bbb;
+        }
+		 header {
+            height: 50px;
+            width: 100%;
+            background-color: #333;
+            color: #fff;
+            padding: 10px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            position: fixed;
+            top: 0; /* Fix header to the top */
+            left: 0;
+            z-index: 1000;
+        }
+        .header-buttons {
+            display: flex;
+        }
+        .header-buttons a {
+            margin-right: 20px;
+            color: #fff;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+        .header-buttons a:hover {
+            color: #ddd;
+        }
+        /* Add space below header to avoid content overlap */
+        body > .container {
+            margin-top: 50px;
+        }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Property 3 Details</h1>
+<header id="mainHeader">
+        <div class="header-buttons">
+            <a href="index.html">Home</a>
+            <a href="LittleRockProperties1.html">Properties</a>
+            <a href="AboutUs.html">About Us</a>
+			<a href="contact.html">Contact Us</a>
+        </div>
     </header>
     <div class="container">
         <nav>
-            <a href="events.html">Book Directly For Events</a>
-            <a href="contact.html">Contact Us</a>
-            <a href="about.html">About Us</a>
-			<a href="Landing.html">Back To Homepage</a>
         </nav>
         <section>
-            <img src="h3.jpg" alt="Property 3" class="property-img">
+            <img src="h2.jpg" alt="Property 2" class="property-img">
             <div class="description">
-                <p>Brief description of Property 3.</p>
+                <p>Brief description of Property 2.</p>
             </div>
             <div class="categories">
                 <div class="category">
@@ -102,7 +151,12 @@
                 <div class="category">
                     <h2>Booking</h2>
                     <p>Book this property now!</p>
-                    <a href="calendly-link">Book Now</a>
+                    <div class="booking-buttons">
+                        <a href="https://www.airbnb.com/rooms/859616286105603942?guests=1&adults=1&s=67&unique_share_id=64e34d22-7525-42d8-bc82-a5c4a87d84e1&source_impression_id=p3_1710787831_YrGcNJ%2BVqCdMiJur
+" id="airbnb-link">AIRBNB</a>
+                        <a href="https://www.vrbo.com/3329870?rm1=a2&expediaPropertyId=92434826&referrerId=HOT.HIS.Share.Landed.Copy_Link
+" id="vrbo-link">VRBO</a>
+                    </div>
                 </div>
             </div>
         </section>
