--- a/LittleRockProperties1.html
+++ b/LittleRockProperties1.html
@@ -103,7 +103,7 @@
         <div class="header-buttons">
             <a href="index.html">Home</a>
             <a href="AboutUs.html">About Us</a>
-            <a href="SocialsEvents.html">Events</a>
+            <a href="contact.html">Contact Us</a>
         </div>
     </header>
     <div class="container">
