--- a/AboutUs.html
+++ b/AboutUs.html
@@ -76,16 +76,16 @@
         </div>
     </header>
     <div class="container">
-        <h2 class="title">Meet Ruth and Jamie - Your Dedicated Short-Term Rental Hosts</h2>
+        <h2 class="title">Meet Ruth and Jaime - Your Dedicated Short-Term Rental Hosts</h2>
         <div class="bio">
             <div class="bio-text">
-                <p>As a dynamic duo with a shared passion for hospitality and a keen eye for detail, Ruth and Jamie ensure that every guest enjoys a seamless and unforgettable stay in their properties.</p>
-                <p>Both born and raised in the heart of the charming town they now call home, Ruth and Jamie's deep-rooted familiarity with the area shines through in every aspect of their hosting. Whether it's recommending hidden gems for dining, sharing insider tips on local attractions, or suggesting off-the-beaten-path activities, their combined knowledge is unparalleled.</p>
-                <p>Ruth and Jamie take great pride in maintaining impeccably clean properties, ensuring that each guest feels right at home from the moment they step through the door. With their meticulous attention to cleanliness and comfort, guests can rest assured that they'll enjoy a relaxing and hygienic environment throughout their stay.</p>
-                <p>What truly sets Ruth and Jamie apart is their lightning-fast response time and personalized travel assistance. Whether guests have a question about the property, need help planning their itinerary, or simply want recommendations for the best coffee shops in town, Ruth and Jamie are always just a message away. With their warm and attentive approach, they go above and beyond to tailor each guest's experience to their unique preferences and needs.</p>
+                <p>As a dynamic duo with a shared passion for hospitality and a keen eye for detail, Ruth and Jaime ensure that every guest enjoys a seamless and unforgettable stay in their properties.</p>
+                <p>Long time residents in the heart of the charming town they now call home, Ruth and Jaime's deep-rooted familiarity with the area shines through in every aspect of their hosting. Whether it's recommending hidden gems for dining, sharing insider tips on local attractions, or suggesting off-the-beaten-path activities, their combined knowledge is unparalleled.</p>
+                <p>Ruth and Jaime take great pride in maintaining impeccably clean properties, ensuring that each guest feels right at home from the moment they step through the door. With their meticulous attention to cleanliness and comfort, guests can rest assured that they'll enjoy a relaxing and hygienic environment throughout their stay.</p>
+                <p>What truly sets Ruth and Jaime apart is their lightning-fast response time and personalized travel assistance. Whether guests have a question about the property, need help planning their itinerary, or simply want recommendations for the best coffee shops in town, Ruth and Jamie are always just a message away. With their warm and attentive approach, they go above and beyond to tailor each guest's experience to their unique preferences and needs.</p>
                 <p>From complimentary welcome baskets to curated lists of local attractions, Ruth and Jamie's thoughtful amenities and personalized touches ensure that every guest feels valued and cared for. Whether you're visiting for a weekend getaway or an extended stay, Ruth and Jamie are dedicated to making your time in their properties truly unforgettable.</p>
             </div>
-            <img src="RuthAndJamieLittleRockAirbnbHost.jpg" alt="Ruth and Jamie - Short-Term Rental Hosts">
+            <img src="RuthAndJamieLittleRockAirbnbHost.jpg" alt="Ruth and Jaime - Short-Term Rental Hosts">
         </div>
     </div>
 </body>
