--- a/contact.html
+++ b/contact.html
@@ -71,8 +71,9 @@
     <div class="container">
         <h2>Contact Us</h2>
         <p>If you have any inquiries or need assistance, please feel free to contact us using the information below:</p>
-        <p>Phone: (123) 456-7890</p>
-        <p>Email: contact@example.com</p>
+        <p>Ruth: (501) 347-3433</p>
+        <p>Jaime: (501) 310-1113</p>
+        <p>Email: thevplaces@gmail.com</p>
     </div>
 </body>
 </html>
