--- a/contact.html
+++ b/contact.html
@@ -71,9 +71,10 @@
     <div class="container">
         <h2>Contact Us</h2>
         <p>If you have any inquiries or need assistance, please feel free to contact us using the information below:</p>
-        <p>Ruth: (501) 347-3433</p>
-        <p>Jaime: (501) 310-1113</p>
-        <p>Email: thevplaces@gmail.com</p>
-    </div>
+        <p></p>
+        <p></p><a href="tel:+15013473433">Call Ruth: (501) 347-3433</a></p>
+        <p><a href="tel:+1501310113">Call Jaime: (501) 310-1113</a></p>                                                        
+        <p><a href="mailto:thevplaces@gmail.com">Email Us: thevplaces@gmail.com</a></p>
+     </div>
 </body>
 </html>
