--- a/contact.html
+++ b/contact.html
@@ -72,9 +72,9 @@
         <h2>Contact Us</h2>
         <p>If you have any inquiries or need assistance, please feel free to contact us using the information below:</p>
         <p></p>
-        <p></p><a href="tel:+15013473433">Call Ruth: (501) 347-3433</a></p>
-        <p><a href="tel:+1501310113">Call Jaime: (501) 310-1113</a></p>                                                        
-        <p><a href="mailto:thevplaces@gmail.com">Email Us: thevplaces@gmail.com</a></p>
+        <p>Call Ruth: <a href="tel:+15013473433"> (501) 347-3433</a></p>
+        <p>Call Jaime: <a href="tel:+15013101113"> (501) 310-1113</a></p>                                                        
+        <p>Email Us: <a href="mailto:thevplaces@gmail.com"> thevplaces@gmail.com</a></p>
      </div>
 </body>
 </html>
