--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             padding: 10px 0;
             text-align: center;
         }
+        header h1 {
+            font-size: 24px; /* Adjust this value to make the heading smaller */
+        }
         .realtor-info {
             text-align: center;
             margin-top: 30px;
