--- a/AboutUs.html
+++ b/AboutUs.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ruth and Jamie - Short-Term Rental Hosts</title>
     <style>
-        /* Add your CSS styles here */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -29,9 +28,6 @@
             justify-content: space-between;
             align-items: center;
         }
-        .header-buttons {
-            margin-top: 10px;
-        }
         .header-buttons a {
             color: #fff;
             text-decoration: none;
@@ -44,17 +40,16 @@
             background-color: #555;
         }
         .bio {
-            display: flex;
-            align-items: flex-start;
-            flex-wrap: wrap;
+            text-align: center; /* Center align the container's content */
         }
         .bio img {
             width: 200px;
             height: auto;
-            margin-right: 20px;
+            margin: 0 auto 20px; /* Center the image and add margin below */
         }
         .bio-text {
-            flex: 1;
+            margin: 0 auto; /* Center the text block if needed */
+            max-width: 800px; /* Optional: Limit the width of the text to improve readability */
         }
         h2.title {
             font-size: 32px;
@@ -78,6 +73,7 @@
     <div class="container">
         <h2 class="title">Meet Ruth and Jaime - Your Dedicated Short-Term Rental Hosts</h2>
         <div class="bio">
+            <img src="RuthAndJamieLittleRockAirbnbHost.jpg" alt="Ruth and Jaime - Short-Term Rental Hosts">
             <div class="bio-text">
                 <p>As a dynamic duo with a shared passion for hospitality and a keen eye for detail, Ruth and Jaime ensure that every guest enjoys a seamless and unforgettable stay in their properties.</p>
                 <p>Long time residents in the heart of the charming town they now call home, Ruth and Jaime's deep-rooted familiarity with the area shines through in every aspect of their hosting. Whether it's recommending hidden gems for dining, sharing insider tips on local attractions, or suggesting off-the-beaten-path activities, their combined knowledge is unparalleled.</p>
@@ -85,8 +81,6 @@
                 <p>What truly sets Ruth and Jaime apart is their lightning-fast response time and personalized travel assistance. Whether guests have a question about the property, need help planning their itinerary, or simply want recommendations for the best coffee shops in town, Ruth and Jamie are always just a message away. With their warm and attentive approach, they go above and beyond to tailor each guest's experience to their unique preferences and needs.</p>
                 <p>From complimentary welcome baskets to curated lists of local attractions, Ruth and Jamie's thoughtful amenities and personalized touches ensure that every guest feels valued and cared for. Whether you're visiting for a weekend getaway or an extended stay, Ruth and Jamie are dedicated to making your time in their properties truly unforgettable.</p>
             </div>
-            <img src="RuthAndJamieLittleRockAirbnbHost.jpg" alt="Ruth and Jaime - Short-Term Rental Hosts">
         </div>
-    </div>
 </body>
 </html>
