--- a/AboutUs.html
+++ b/AboutUs.html
@@ -11,6 +11,7 @@
             padding: 0;
             background-color: #f0f0f0;
             color: #333;
+            padding-top: 60px; /* Added to ensure content is not hidden behind the fixed header */
         }
         .container {
             max-width: 1200px;
@@ -21,35 +22,41 @@
             box-sizing: border-box;
         }
         header {
+            height: 50px; /* Fixed height */
+            width: 100%;
             background-color: #333;
             color: #fff;
             padding: 10px;
             display: flex;
             justify-content: space-between;
             align-items: center;
+            position: fixed; /* Makes the header fixed at the top */
+            left: 0;
+            top: 0;
+            z-index: 1000; /* Ensures the header is above other content */
         }
         .header-buttons a {
+            margin-right: 20px; /* Adjusted margin */
             color: #fff;
             text-decoration: none;
-            margin-right: 10px;
             padding: 5px 10px;
             border-radius: 5px;
-            transition: background-color 0.3s ease;
+            transition: color 0.3s ease;
         }
         .header-buttons a:hover {
-            background-color: #555;
+            color: #ddd; /* Hover effect color change */
         }
         .bio {
-            text-align: center; /* Center align the container's content */
+            text-align: center;
         }
         .bio img {
             width: 200px;
             height: auto;
-            margin: 0 auto 20px; /* Center the image and add margin below */
+            margin: 0 auto 20px;
         }
         .bio-text {
-            margin: 0 auto; /* Center the text block if needed */
-            max-width: 800px; /* Optional: Limit the width of the text to improve readability */
+            margin: 0 auto;
+            max-width: 800px;
         }
         h2.title {
             font-size: 32px;
@@ -74,7 +81,7 @@
         <h2 class="title">Meet Ruth and Jaime - Your Dedicated Short-Term Rental Hosts</h2>
         <div class="bio">
             <img src="RuthAndJamieLittleRockAirbnbHost.jpg" alt="Ruth and Jaime - Short-Term Rental Hosts">
-            <div class="bio-text">
+             <div class="bio-text">
                 <p>As a dynamic duo with a shared passion for hospitality and a keen eye for detail, Ruth and Jaime ensure that every guest enjoys a seamless and unforgettable stay in their properties.</p>
                 <p>Long time residents in the heart of the charming town they now call home, Ruth and Jaime's deep-rooted familiarity with the area shines through in every aspect of their hosting. Whether it's recommending hidden gems for dining, sharing insider tips on local attractions, or suggesting off-the-beaten-path activities, their combined knowledge is unparalleled.</p>
                 <p>Ruth and Jaime take great pride in maintaining impeccably clean properties, ensuring that each guest feels right at home from the moment they step through the door. With their meticulous attention to cleanliness and comfort, guests can rest assured that they'll enjoy a relaxing and hygienic environment throughout their stay.</p>
@@ -82,5 +89,6 @@
                 <p>From complimentary welcome baskets to curated lists of local attractions, Ruth and Jamie's thoughtful amenities and personalized touches ensure that every guest feels valued and cared for. Whether you're visiting for a weekend getaway or an extended stay, Ruth and Jamie are dedicated to making your time in their properties truly unforgettable.</p>
             </div>
         </div>
+    </div>
 </body>
 </html>
