--- a/LittleRockProperties2.html
+++ b/LittleRockProperties2.html
@@ -137,7 +137,7 @@
             <p>Location: Downtown Little Rock</p>
             <p>Price: $X</p>
             <p>More information about Property 1.</p>
-            <a href="Properties/property1.html">See More</a>
+            <a href="property4.html">See More</a>
         </div>
     </div>
     <div id="property2-info" class="overlay" onclick="hideOverlay('property2-info')">
@@ -146,7 +146,7 @@
             <p>Location: Downtown Little Rock</p>
             <p>Price: $Y</p>
             <p>More information about Property 2.</p>
-            <a href="Properties/property2.html">See More</a>
+            <a href="property5.html">See More</a>
         </div>
     </div>
     <div id="property3-info" class="overlay" onclick="hideOverlay('property3-info')">
@@ -155,7 +155,7 @@
             <p>Location: Downtown Little Rock</p>
             <p>Price: $Z</p>
             <p>More information about Property 3.</p>
-            <a href="https://www.vrbo.com/4657269ha">VRBO</a>
+            <a href="property6.html">See More</a>
         </div>
     </div>
     <script>
