--- a/LittleRockProperties3.html
+++ b/LittleRockProperties3.html
@@ -109,18 +109,18 @@
     <div class="container">
         <section>
             <!-- Property 1 -->
-            <div class="property" onclick="showOverlay('property1-info')">
-                <img src="PropertyPics/DowntownLittleRockBNB7Landing.webp" alt="Property 1">
+            <div class="property" onclick="showOverlay('property7-info')">
+                <img src="PropertyPics/DowntownLittleRockBNB7Landing.webp" alt="Property 7">
                 <p>Click for details</p>
             </div>
             <!-- Property 2 -->
-            <div class="property" onclick="showOverlay('property2-info')">
-                <img src="PropertyPics/DowntownLittleRockBNB8Landing.webp" alt="Property 2">
+            <div class="property" onclick="showOverlay('property8-info')">
+                <img src="PropertyPics/DowntownLittleRockBNB8Landing.webp" alt="Property 8">
                 <p>Click for details</p>
             </div>
             <!-- Property 3 -->
-            <div class="property" onclick="showOverlay('property3-info')">
-                <img src="PropertyPics/DowntownLittleRockBNB9Landing.webp" alt="Property 3">
+            <div class="property" onclick="showOverlay('property9-info')">
+                <img src="PropertyPics/DowntownLittleRockBNB9Landing.webp" alt="Property 9">
                 <p>Click for details</p>
             </div>
         </section>
@@ -131,31 +131,31 @@
         </div>
     </div>
     <!-- Overlays -->
-    <div id="property1-info" class="overlay" onclick="hideOverlay('property1-info')">
+    <div id="property1-info" class="overlay" onclick="hideOverlay('property7-info')">
         <div class="overlay-content">
-            <h2>Property 1</h2>
+            <h2>Property 7</h2>
             <p>Location: Downtown Little Rock</p>
             <p>Price: $X</p>
-            <p>More information about Property 1.</p>
-            <a href="Properties/property1.html">See More</a>
+            <p>More information about Property 7.</p>
+            <a href="property7.html">See More</a>
         </div>
     </div>
-    <div id="property2-info" class="overlay" onclick="hideOverlay('property2-info')">
+    <div id="property2-info" class="overlay" onclick="hideOverlay('property8-info')">
         <div class="overlay-content">
-            <h2>Property 2</h2>
+            <h2>Property 8</h2>
             <p>Location: Downtown Little Rock</p>
             <p>Price: $Y</p>
-            <p>More information about Property 2.</p>
-            <a href="Properties/property2.html">See More</a>
+            <p>More information about Property 8.</p>
+            <a href="property8.html">See More</a>
         </div>
     </div>
-    <div id="property3-info" class="overlay" onclick="hideOverlay('property3-info')">
+    <div id="property3-info" class="overlay" onclick="hideOverlay('property9-info')">
         <div class="overlay-content">
-            <h2>Property 3</h2>
+            <h2>Property 9</h2>
             <p>Location: Downtown Little Rock</p>
             <p>Price: $Z</p>
-            <p>More information about Property 3.</p>
-            <a href="https://www.vrbo.com/4657269ha">VRBO</a>
+            <p>More information about Property 9.</p>
+            <a href="property9.html">See More</a>
         </div>
     </div>
     <script>
