--- a/property5.html
+++ b/property5.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Family and pet friendly home!</title>
+    <title>Your Next 5 Star Get Away</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -152,7 +152,7 @@
             <button class="slide-arrow next-arrow">&#10095;</button>
         </div>
         <div class="description">
-            <p>Family and pet friendly home!</p>
+            <p>Your Next 5 Star Get Away</p>
             <p id="distanceDisplay">Calculating distance...</p> <!-- Adjusted for distance display -->
         </div>
 <div class="categories">
@@ -172,8 +172,8 @@
                 <h2>Booking</h2>
                 <p>Book this property now!</p>
                 <div class="booking-buttons">
-                    <a href="https://www.airbnb.com/rooms/859616286105603942?guests=1&adults=1&s=67&unique_share_id=64e34d22-7525-42d8-bc82-a5c4a87d84e1&source_impression_id=p3_1710787831_YrGcNJ%2BVqCdMiJur" id="airbnb-link">AIRBNB</a>
-                    <a href="https://www.vrbo.com/3329870?rm1=a2&expediaPropertyId=92434826&referrerId=HOT.HIS.Share.Landed.Copy_Link">VRBO</a>
+                    <a href="https://www.airbnb.com/rooms/22447442?guests=1&adults=1&s=67&unique_share_id=a6ae172e-aa79-4864-871a-e34b56f2e89e&source_impression_id=p3_1710787836_fGHpFEmUICbcEtmz" id="airbnb-link">AIRBNB</a>
+                    <a href="https://www.vrbo.com/459409?chkin=2024-03-30&chkout=2024-03-31&rm1=a8&expediaPropertyId=27129638&referrerId=HOT.HIS.Share.Landed.Copy_Link">VRBO</a>
                 </div>
             </div>
     </section>
